2018-06-13 Franz Holzinger  <franz@ttproducts.de>
    * fix PHP Runtime Deprecation Notice: Non-static method JambageCom\Agency\Utility\SessionUtility::readData() should not be called statically in Classes/Request/Parameters.php line 553

2018-05-22 Franz Holzinger  <franz@ttproducts.de>
    * replace tx_div2007 calls by calls to the JambageCom\Div2007 namespace classes or to direct TYPO3 8 calls
    * hint: Only add privacy_policy_acknowledged to create.fields for activation of the privacy policy checkbox.

2018-04-27 Franz Holzinger  <franz@ttproducts.de>
    * new feature: According to DSGVO / GDPR a new checkbox for the privacy policy agreement must be checked before the user can continue and before his data is allowed to be stored on the server. Therefore the submit button is disabled until this checkbox is checked.
    * new feature: constants file.privacyPolicyFile and privacyPolicyUrl for the privacy policy agreement file or page.
    * new feature: Update the template ###TEMPLATE_CREATE### with subpart ###SUB_INCLUDED_FIELD_privacy_policy_acknowledged### and markers ###PRIVACY_POLICY_URL### for the link to the privacy policy agreement page defined by PIDprivacy.
    * add markers ###LABEL_TOOLTIP_CLICK_HERE_TO_SEE_PRIVACY_POLICY###, ###LABEL_CLICK_HERE_TO_SEE_PRIVACY_POLICY###, ###LABEL_PRIVACY_POLICY_ACKNOWLEDGED_2###, ###LABEL_PRIVACY_POLICY_HINT###, ###LABEL_PRIVACY_POLICY_HINT_1###, ###LABEL_PRIVACY_POLICY_HINT_2###
    * add new fields to fe_users: privacy_policy_acknowledged and privacy_policy_date
    * new feature: set the privacy_policy_date to the current date when the FE user has confirmed for the privacy agreement and continued with the SAVE button.

2018-04-26 Franz Holzinger  <franz@ttproducts.de>
    * Remove the markers ###XHTML###. If you want to use XHTML then you should use a tool like tidy to convert the HTML into a XHTML.

2018-04-10 Franz Holzinger  <franz@ttproducts.de>